# pane

./: .gitignore  CMakeLists.txt  CMakePresets.json  dispatch.json  index.html  libs.md  package.json  packages.config  packages.ps1  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.config.json  tsconfig.json  tsconfig.pane.json  tsconfig.vite.json  tsconfig.vite_config.json  uv.toml  vite.config.ts  webview.ts
.config/: dotnet-tools.json
.github/workflows/: build.yaml  notify.yaml  push.yaml  release.yaml
apps/: CMakeLists.txt
apps/browser/: CMakeLists.txt  main.cpp
apps/task/: CMakeLists.txt  main.cpp
browser/: CMakeLists.txt  main.cpp  main.cxx
cmake/: DownloadVCRedist.cmake  FindAda.cmake  FindConfig.cmake  FindCppWinRT.cmake  FindGlaze.cmake  FindSQLite.cmake  FindWIL.cmake  FindWebView2.cmake  dependencies.cmake  download_vc_redist.cmake  include_before.cmake  install_packages.cmake  install_wix.cmake  local_packages.cmake  package_install.cmake  pane_package_install.cmake  provider.cmake  providers.cmake  wix.cmake
cmake/dependencies/: ada.cmake  argz.cmake  cppwinrt.cmake  glaze.cmake  sqlite.cmake  webview2.cmake  wil.cmake
cmake/download_vc_redist/: download_vc_redist.cmake
cmake/libs/: ada.cmake  config.cmake  cppwinrt.cmake  glaze.cmake  sqlite.cmake  webview2.cmake  (+1 more)
config/: CMakeLists.txt
data/: dispatch.json  index.html
docs/: CMakeLists.txt  main.cxx
example/: CMakeLists.txt
example/console/: CMakeLists.txt  main.cpp
example/minimal_console/: CMakeLists.txt
examples/: CMakeLists.txt
examples/console/: CMakeLists.txt  main.cpp  main.cxx
examples/json/: CMakeLists.txt
examples/src/: console.cxx
examples/webview/: CMakeLists.txt  main.cpp  main.cxx  tsconfig.json
examples/webview/gui/: index.html  tsconfig.json  tsconfig.vite.json  vite.config.ts
examples/webview/gui/src/: address_bar.ts  app.ts  button.ts  comms.ts  component.ts  components.ts  event.ts  index.css  index.ts  payload.ts  reset.css  test.ts  url.ts  utility.ts  webview_message.ts
examples/webview/gui/src/component/: address_bar.ts  body.ts  button.ts  component.ts  index.ts
examples/webview_navigation/: CMakeLists.txt  main.cxx
examples/window/: CMakeLists.txt  main.cpp  main.cxx  window.cxx
examples/window_manager/: CMakeLists.txt  main.cpp  main.cxx
examples/window_testing/: main.cxx
examples/wix/: CMakeLists.txt  main.cpp
experiment/: CMakeLists.txt
libs/: CMakeLists.txt  FindAda.cmake  FindGlaze.cmake  FindWebView2.cmake  ada.cmake  glaze.cmake
libs/ada/: CMakeLists.txt
libs/config/: CMakeLists.txt
libs/cppwinrt/: CMakeLists.txt
libs/glaze/: CMakeLists.txt
libs/sqlite/: CMakeLists.txt
libs/webview2/: CMakeLists.txt
libs/wil/: CMakeLists.txt
node/: index.ts  webview.ts
pane/: CMakeLists.txt  string.cxx  tsconfig.json
pane/data/: index.html
pane/example/: json.cxx
pane/examples/: CMakeLists.txt  console.cxx  windows.cxx  windows_ptr.cxx
pane/examples/advanced/: CMakeLists.txt
pane/examples/advanced/webview/: CMakeLists.txt  webview.cxx
pane/examples/basic/: console.cxx  windows.cxx
pane/examples/src/: co_init.cxx  color.cxx  console.cxx  file.cxx  file_picker.cxx  json.cxx  library.cxx  url.cxx  window.cxx
pane/examples/webview/: main.cxx
pane/examples/window/: CMakeLists.txt  main.cpp  main.cxx  manager.cpp  manager.hpp
pane/examples_archive/: CMakeLists.txt
pane/examples_archive/src/: color.cxx  file.cxx  library.cxx
pane/include/pane/: argv.hpp  co_init.hxx  color.hpp  color.hxx  config.hpp  config.hxx  console.hxx  debug.hpp  debug.hxx  error.hpp  error.hxx  file.hxx  file_picker.hxx  filesystem.hpp  filesystem.hxx  gdi_plus.hxx  guid.hpp  guid.hxx  hstring.hpp  hstring.hxx  icu.hpp  icu.hxx  math.hxx  message_box.hpp  message_box.hxx  message_window.hpp  pane.hpp  pane.hxx  path.hxx  process.hxx  string.hxx  system.hpp  system.hxx  text.hpp  text.hxx  url.hxx  webview.hpp  webview.hxx  window.hpp  window.hxx
pane/internal/: icu.cpp  math.cpp
pane/libs/: CMakeLists.txt  ada.cmake  config.cmake  cppwinrt.cmake  glaze.cmake  install.cmake  webview2.cmake  wil.cmake
pane/libs/ada/: CMakeLists.txt
pane/libs/argz/: CMakeLists.txt
pane/libs/cppwinrt/: CMakeLists.txt
pane/libs/glaze/: CMakeLists.txt
pane/libs/libarchive/: CMakeLists.txt
pane/libs/sqlite/: CMakeLists.txt
pane/libs/webview2/: CMakeLists.txt
pane/libs/wil/: CMakeLists.txt
pane/src/: argv.cpp  co_init.cpp  co_init.cxx  color.cpp  color.cxx  config.cxx  console.cxx  debug.cpp  debug.cxx  error.cpp  error.cxx  file.cxx  file_picker.cpp  file_picker.cxx  filesystem.cpp  filesystem.cxx  gdi_plus.cxx  glaze.cxx  glaze.hxx  guid.cxx  hstring.cpp  hstring.cxx  icu.cxx  icu.hxx  input.cxx  math.cxx  message_box.cpp  message_box.cxx  path.cxx  print.cpp  process.cpp  process.cxx  string.cxx  system.cpp  system.cxx  text.cpp  text.cxx  url.cxx  webview.cxx  window.cpp  (+1 more)
pane/src-typescript/: global.d.ts  index.d.ts  index.ts  package.json  tsconfig.json  tsconfig.pane.json  webview.ts
pane/src-typescript/component/: address_bar.ts  button.ts  component.ts
pane/src/include/pane/: color.hxx  config.hxx  debug.hxx  gdi_plus.hxx  input.hxx  pane.hxx  system.hxx  window.hxx
pane/src/pane/: hstring.cxx
pane/task/: CMakeLists.txt  task.cxx
pane/typescript/: component.ts  index.ts  page.ts  webview.ts
scripts/: generate.ts  install.ps1  install_packages.ps1  jq.ps1  jq.ts  libs.ps1  notify.ts  wix.ps1
src/: color.cpp  color.cxx  config.cpp  console.cpp  console.cxx  debug.cxx  file_picker.cxx  filesystem.cpp  filesystem.cxx  gdi_plus.cpp  gdi_plus.cxx  guid.cpp  icu.cpp  index.ts  input.cpp  input.cxx  message_window.cxx  pane.cpp  process.cpp  string.cpp  system.cpp  system.cxx  text.cpp  text.cxx  tsconfig.json  url.cpp  url.cxx  webview.cpp  webview.cxx  window.cpp  window.cxx  window2.cxx
task/: CMakeLists.txt  task.cpp
tasks/: CMakeLists.txt  download_vc_redist.cmake
tests/: CMakeLists.txt
vite/: button.ts  comms.ts  index.ts  my-button.ts  webview.ts
webview_docs/: CMakeLists.txt  main.cxx
(+58 files in other folders)
