include(dependencies)
add_library(pane)
add_library(pane::pane ALIAS pane)
target_compile_features(pane PUBLIC c_std_17 cxx_std_23)
target_compile_definitions(
    pane
    PUBLIC UNICODE WIN32_LEAN_AND_MEAN NOMINMAX GDIPVER=0x0110
)
target_compile_options(
    pane
    PUBLIC
        $<$<CXX_COMPILER_ID:MSVC>:
        /W4
        /WX
        /utf-8
        /bigobj
        /diagnostics:color
        /permissive-
        /Zc:__cplusplus,enumTypes,templateScope,throwingNew,preprocessor
        >
        $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_FRONTEND_VARIANT:MSVC>>:
        /W4
        /WX
        -Wno-braced-scalar-init
        >
        $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_FRONTEND_VARIANT:GNU>>:
        -Wall
        -Werror
        -Wno-braced-scalar-init
        >
)
target_link_options(
    pane
    PUBLIC
        $<$<CXX_COMPILER_ID:MSVC>:
        /WX
        >
        $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_FRONTEND_VARIANT:MSVC>>:
        /WX
        >
        $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_FRONTEND_VARIANT:GNU>>:
        -Wl,/WX
        >
)
target_sources(
    pane
    PUBLIC FILE_SET HEADERS BASE_DIRS include
    PRIVATE
        src/co_init.cpp
        src/color.cpp
        src/config.cpp
        src/console.cpp
        src/debug.cpp
        src/error.cpp
        src/file_picker.cpp
        src/filesystem.cpp
        src/gdi_plus.cpp
        src/guid.cpp
        src/hstring.cpp
        src/icu.cpp
        src/input.cpp
        src/math.cpp
        src/message_box.cpp
        src/process.cpp
        src/string.cpp
        src/system.cpp
        src/text.cpp
        src/url.cpp
        src/webview.cpp
        src/window.cpp
)
target_link_libraries(
    pane
    PUBLIC
        dwmapi
        gdiplus
        Urlmon
        WindowsApp
        ada::ada-url
        stephenberry::glaze
        microsoft::webview2
        microsoft::wil
        microsoft::cppwinrt
)
